docs/tests/parser/interface/invalid/InterfaceMissingCloseBrace.b
interface IFoo {
    fn void foo();
